fix top margin and padding gap

--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 /* header */
 
+html{
+    margin-top:0;
+    padding-top:0;
+}
+body{
+    margin-top:0;
+    padding-top:0;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -12,6 +21,7 @@ header {
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
+
 }
 
 .logo {
